--- a/source/photo.html
+++ b/source/photo.html
@@ -224,6 +224,7 @@
             <div class="video__img"></div>
           </div>
           <div class="video__player player">
+            <h4 class="visually-hidden">Видео-плеер</h4>
             <div class="player__volume">
               <span class="player__volume-bar"></span>
             </div>
