--- a/source/photo.html
+++ b/source/photo.html
@@ -119,7 +119,7 @@
                   srcset="img/photo-cactus-tablet@2x.jpg 2x, img/photo-cactus-tablet@1x.jpg 1x">
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
-                <img src="img/photo-cactus-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main"
+                <img src="img/photo-cactus-mobile@1x.jpg" alt="Фото" class="photo-card__img"
                   srcset="img/photo-cactus-mobile@2x.jpg 2x">
               </picture>
               <div class="photo-card__info photo-card__info--cactus card-info">
@@ -152,7 +152,7 @@
                   srcset="img/photo-roads-tablet@2x.jpg 2x, img/photo-roads-tablet@1x.jpg 1x">
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
-                <img src="img/photo-roads-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main"
+                <img src="img/photo-roads-mobile@1x.jpg" alt="Фото" class="photo-card__img"
                   srcset="img/photo-roads-mobile@2x.jpg 2x">
               </picture>
               <div class="photo-card__info photo-card__info--roads card-info">
@@ -185,7 +185,7 @@
                   srcset="img/photo-bridge-tablet@2x.jpg 2x, img/photo-bridge-tablet@1x.jpg 1x">
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
-                <img src="img/photo-bridge-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main"
+                <img src="img/photo-bridge-mobile@1x.jpg" alt="Фото" class="photo-card__img"
                   srcset="img/photo-bridge-mobile@2x.jpg 2x">
               </picture>
               <div class="photo-card__info photo-card__info--bridge card-info">
